Revert "Folding station"